<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WineHound</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="regions">Regions</string>
    <string name="wineries">Wineries</string>
    <string name="favourites">Favourites</string>

    <string name="home">Home</string>
    <string name="about_winehound">About WineHound</string>
    <string name="settings">Settings</string>

    <string name="whats_on">What\'s On</string>
    <string name="about">About</string>
    <string name="download_map">Download Map</string>
    <string name="contact">Contact</string>
    <string name="cellar_door">Cellar Door</string>
    <string name="wines">Wines</string>

    <string name="about_text">WineHound is your essential guide to all of Australia\'s wineries.  Explore winery regions, discover wineries and view detailed information on wines, cellar doors and the wine events in the regions and capital cities.</string>
    <string name="terms_of_use">Terms Of Use</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="driving_directions">Driving Directions</string>
    <string name="phone">Phone:</string>
    <string name="email">Email:</string>
    <string name="website">Website:</string>
    <string name="more">Read More</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="map">Map</string>
    <string name="no_results">Sorry, no results matched your search.  Please try again.</string>

    <string name="fetching_regions">Loading regions.</string>
    <string name="fetching_wineries">Loading wineries.</string>
    <string name="fetching_events">Loading events.</string>

    <string name="no_fav_wineries">You haven\'t saved any Wineries to your Favourites yet!</string>
    <string name="no_fav_wines">You haven\'t saved any Wines to your Favourites yet!</string>
    <string name="no_fav_events">You haven\'t saved any Events to your Favourites yet!</string>


    <string name="apply_filters">Apply Filter</string>
    <string name="no_wines">No Wines</string>
    
    
    <string name="vintage">Vintage:</string>
    <string name="cost">Cost:</string>
    <string name="date_bottled">Date Bottled:</string>
    <string name="grape_variety">Grape Variety:</string>
    <string name="alcoholic_content">Alcoholic Content:</string>
    <string name="winemakers">Winemakers:</string>
    <string name="ph">pH:</string>
    <string name="closed_under">Closed Under:</string>

    <string name="colour">Colour:</string>
    <string name="aroma">Aroma:</string>
    <string name="palate">Palate:</string>


    <string name="view_tasting_notes">Tasting Notes PDF</string>
    <string name="wine_details">Wine Details</string>
    <string name="tasting_notes">Tasting Notes</string>

    <string name="buy_online">Buy Online</string>
    <string name="share_wine">Share Wine</string>

    <string name="add_your_email">Add your email address to hear all about this winery\'s news and events.</string>
    <string name="email_used">Your email address is used to send you news\n and events from your favourite wineries.</string>
    <string name="change_email">Change Email</string>
    <string name="do_you_wish">Do you wish to be added to this winery\'s mailing list to receive their news and events?</string>
    <string name="add_to_fav">Add to Favourites</string>
    <string name="email_address">Email Address</string>

    <string name="error">Error</string>
    <string name="invalid_email">Email does not appear to be valid.</string>
    <string name="opening_hours">Opening Hours:</string>

    <string name="no_winery_events">No events for this Winery</string>
    <string name="no_region_events">No events for this Region</string>
    <string name="events">Events</string>

    <string name="add_to_calendar">Add to Calendar</string>
    <string name="view_website">View Website</string>

    <string name="when">When:</string>
    <string name="where">Where:</string>
    <string name="telephone">Telephone:</string>

    <string name="email_updated">Email address updated.</string>

    <string name="no_wineries_for_region">There are no wineries for this region</string>

    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>

    <string name="no_events">No Events Found.</string>
    <string name="trade_events">Trade Events</string>
</resources>
