<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_large">

    <au.net.winehound.ui.views.edmondsans.EdmondSansTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/favourites"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/winehound_red" />

    <au.net.winehound.ui.views.edmondsans.EdmondSansTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_your_email"
        android:id="@+id/favourite_dialog_text"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/padding_medium"
        android:gravity="center" />

    <au.net.winehound.ui.views.edmondsans.EdmondSansEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/favourite_dialog_email"
        android:layout_gravity="center_horizontal"
        android:hint="@string/email_address"
        android:layout_marginTop="@dimen/padding_medium" />

    <au.net.winehound.ui.views.edmondsans.EdmondSansButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_to_fav"
        android:id="@+id/favourite_dialog_add_button"
        android:layout_gravity="center_horizontal"
        android:drawableLeft="@drawable/favourite_icon_red_norm"
        android:layout_marginTop="@dimen/padding_medium"
        android:drawablePadding="@dimen/padding_medium" />

</LinearLayout>