<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@drawable/month_days_background">

            <au.net.winehound.ui.views.edmondsans.EdmondSansTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sun"
                android:textAllCaps="true"
                android:gravity="center_horizontal"/>

            <au.net.winehound.ui.views.edmondsans.EdmondSansTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mon"
                android:textAllCaps="true"
                android:gravity="center_horizontal"/>

            <au.net.winehound.ui.views.edmondsans.EdmondSansTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tue"
                android:textAllCaps="true"
                android:gravity="center_horizontal"/>

            <au.net.winehound.ui.views.edmondsans.EdmondSansTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wed"
                android:textAllCaps="true"
                android:gravity="center_horizontal"/>

            <au.net.winehound.ui.views.edmondsans.EdmondSansTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/thu"
                android:textAllCaps="true"
                android:gravity="center_horizontal"/>

            <au.net.winehound.ui.views.edmondsans.EdmondSansTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fri"
                android:textAllCaps="true"
                android:gravity="center_horizontal"/>

            <au.net.winehound.ui.views.edmondsans.EdmondSansTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sat"
                android:textAllCaps="true"
                android:gravity="center_horizontal"/>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.bonet.views.BtCalendarView
                android:id="@+id/event_month_calender"
                android:layout_width="match_parent"
                android:layout_height="@dimen/events_calender_height"
                android:layout_marginTop="@dimen/padding_medium"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                />

            <ProgressBar
                android:id="@+id/event_month_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/event_month_list"
            android:layout_weight="1"
            android:orientation="vertical"
            android:divider="?android:attr/listDivider"
            android:showDividers="middle"/>

        <au.net.winehound.ui.views.edmondsans.EdmondSansTextView
            android:id="@+id/event_month_no_events"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_events"
            android:gravity="center"
            style="?android:attr/textAppearanceMedium"/>
    </LinearLayout>

</ScrollView>