<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        >

        <au.net.winehound.ui.views.edmondsans.EdmondSansTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_used"/>

        <au.net.winehound.ui.views.edmondsans.EdmondSansEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:imeOptions="flagNoExtractUi"
            android:hint="@string/email_address"
            android:id="@+id/settings_email"
            android:layout_marginTop="@dimen/padding_large"
            android:layout_marginBottom="@dimen/padding_large"/>

        <au.net.winehound.ui.views.edmondsans.EdmondSansButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_email"
            android:id="@+id/settings_change" />
    </LinearLayout>

</ScrollView>