<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"

        android:orientation="vertical"
        android:layout_width="match_parent"
        xmlns:fcf="http://schemas.android.com/apk/res-auto"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">


        <LinearLayout
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <at.technikum.mti.fancycoverflow.FancyCoverFlow
                android:id="@+id/winelist_coverflow"
                android:layout_width="match_parent"
                android:layout_height="@dimen/header_image_height"
                fcf:maxRotation="0"
                fcf:unselectedAlpha="1.0"
                fcf:unselectedSaturation="0.0"
                fcf:unselectedScale="0.6" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="@dimen/padding_medium">

                <au.net.winehound.ui.views.edmondsans.EdmondSansTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    tools:text="Medium Text"
                    android:id="@+id/winelist_wine_name"
                    android:layout_weight="1"
                    android:textColor="@color/winehound_red"
                    android:layout_gravity="center_vertical" />

                <ImageView
                    android:id="@+id/winelist_favourite_button"
                    android:layout_width="@dimen/title_height"
                    android:layout_height="@dimen/title_height"
                    android:src="@drawable/favourite_icon_red_norm"
                    android:background="?android:attr/selectableItemBackground"
                    android:scaleType="centerInside" />
            </LinearLayout>

            <WebView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/winelist_wine_description"
                android:layout_marginBottom="@dimen/padding_medium"
                />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal">

                <au.net.winehound.ui.views.edmondsans.EdmondSansButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/buy_online"
                    android:id="@+id/winelist_buy_online"
                    android:drawableLeft="@drawable/shopping_cart_icon"
                    android:drawablePadding="@dimen/padding_medium"
                    android:layout_weight="1" />

                <au.net.winehound.ui.views.edmondsans.EdmondSansButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/view_tasting_notes"
                    android:id="@+id/winelist_tasting_notes_button"
                    android:drawableLeft="@drawable/document_icon"
                    android:drawablePadding="@dimen/padding_medium"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/activity_vertical_margin" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/winelist_tasting_notes"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:background="@color/winehound_cream"
            android:layout_marginTop="@dimen/padding_medium"
            android:paddingTop="@dimen/padding_medium"
            android:paddingBottom="@dimen/padding_medium">

            <au.net.winehound.ui.views.edmondsans.EdmondSansTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"

                android:text="@string/tasting_notes" />

            <au.net.winehound.ui.views.edmondsans.EdmondSansTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colour"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/padding_medium" />

            <au.net.winehound.ui.views.edmondsans.EdmondSansTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="New Text"
                android:id="@+id/winelist_colour" />

            <au.net.winehound.ui.views.edmondsans.EdmondSansTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aroma"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/padding_medium" />

            <au.net.winehound.ui.views.edmondsans.EdmondSansTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="New Text"
                android:id="@+id/winelist_aroma" />

            <au.net.winehound.ui.views.edmondsans.EdmondSansTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/palate"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/padding_medium" />

            <au.net.winehound.ui.views.edmondsans.EdmondSansTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="New Text"
                android:id="@+id/winelist_palate"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/winelist_details"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/padding_medium"
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

            <au.net.winehound.ui.views.edmondsans.EdmondSansTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/wine_details"
                android:layout_marginBottom="@dimen/padding_medium" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent">

                <TableRow
                    android:id="@+id/winelist_vintage_row"
                    android:layout_marginBottom="@dimen/padding_small"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    >

                    <au.net.winehound.ui.views.edmondsans.EdmondSansTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/padding_xsmall"
                        android:text="@string/vintage" />

                    <au.net.winehound.ui.views.edmondsans.EdmondSansTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="New Text"
                        android:id="@+id/winelist_vintage"
                        android:textColor="@color/winehound_red" />
                </TableRow>

                <TableRow
                    android:id="@+id/winelist_cost_row"
                    android:layout_marginBottom="@dimen/padding_small"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <au.net.winehound.ui.views.edmondsans.EdmondSansTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/padding_xsmall"

                        android:text="@string/cost" />

                    <au.net.winehound.ui.views.edmondsans.EdmondSansTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/winehound_red"
                        tools:text="New Text"
                        android:id="@+id/winelist_cost" />
                </TableRow>

                <TableRow
                    android:id="@+id/winelist_date_row"
                    android:layout_marginBottom="@dimen/padding_small"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <au.net.winehound.ui.views.edmondsans.EdmondSansTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/padding_xsmall"

                        android:text="@string/date_bottled"/>

                    <au.net.winehound.ui.views.edmondsans.EdmondSansTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/winehound_red"
                        tools:text="New Text"
                        android:id="@+id/winelist_date_bottled" />
                </TableRow>

                <TableRow
                    android:id="@+id/winelist_variety_row"
                    android:layout_marginBottom="@dimen/padding_small"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <au.net.winehound.ui.views.edmondsans.EdmondSansTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/padding_xsmall"
                        android:text="@string/grape_variety"/>

                    <au.net.winehound.ui.views.edmondsans.EdmondSansTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/winehound_red"
                        android:text="New Text"
                        android:id="@+id/winelist_variety"
                        android:layout_weight="1" />
                </TableRow>

                <TableRow
                    android:id="@+id/winelist_alcoholic_content_row"
                    android:layout_marginBottom="@dimen/padding_small"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <au.net.winehound.ui.views.edmondsans.EdmondSansTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/padding_xsmall"
                        android:text="@string/alcoholic_content"/>

                    <au.net.winehound.ui.views.edmondsans.EdmondSansTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/winehound_red"
                        tools:text="New Text"
                        android:id="@+id/winelist_alcoholic_content" />
                </TableRow>

                <TableRow
                    android:id="@+id/winelist_winemakers_row"
                    android:layout_marginBottom="@dimen/padding_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <au.net.winehound.ui.views.edmondsans.EdmondSansTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/padding_xsmall"
                        android:text="@string/winemakers"/>

                    <au.net.winehound.ui.views.edmondsans.EdmondSansTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/winehound_red"
                        tools:text="New Text that is really long, I wonder if this will wrap on older versions"
                        android:id="@+id/winelist_winemakers"
                        android:layout_weight="1" />
                </TableRow>

                <TableRow
                    android:id="@+id/winelist_ph_row"
                    android:layout_marginBottom="@dimen/padding_small"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <au.net.winehound.ui.views.edmondsans.EdmondSansTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/padding_xsmall"
                        android:text="@string/ph"/>

                    <au.net.winehound.ui.views.edmondsans.EdmondSansTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/winehound_red"
                        android:text="New Text"
                        android:id="@+id/winelist_ph" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:id="@+id/winelist_closure_row"
                    android:layout_marginBottom="@dimen/padding_small"
                    android:layout_height="fill_parent">

                    <au.net.winehound.ui.views.edmondsans.EdmondSansTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/padding_xsmall"
                        android:text="@string/closed_under"/>

                    <au.net.winehound.ui.views.edmondsans.EdmondSansTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/winehound_red"
                        tools:text="New Text"
                        android:id="@+id/winelist_closed_under" />
                </TableRow>
            </TableLayout>


        </LinearLayout>


    </LinearLayout>

</ScrollView>